Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextObjRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Text> yoda
        Text y = yoda:useForce(true, true)
        output "passed"
     end
end
