Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBoolObjRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, Boolean> yoda
        boolean y = yoda("green", "green", true)
     end
end
